--- a/Desktop/Vs code/Javascript/React/my-portfolio/.gitignore
+++ b/Desktop/Vs code/Javascript/React/my-portfolio/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore system files
+**/AppData/
+**/Cookies/
+**/Local Settings/
+**/My Documents/
+**/NetHood/
+**/PrintHood/
+**/Recent/
+**/SendTo/
+**/Start Menu/
+**/Templates/
+*.log
+.vscode/
+.idea/
+
